src/FinancialForce Accounting/objects/codaTaxRate__c.object
<CustomObject>
    <customHelpPage>codahelptaxcode</customHelpPage>
    <description>Stores details on tax rates.</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rate</label>
        <precision>7</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipName>TaxRates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Tax Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>